# voxcode

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.example.toml  config.toml  install.sh  pyproject.toml  test_interactive.py  uninstall.sh  update.sh
src/voxcode/: __init__.py  __main__.py  audio.py  cli.py  clipboard_bridge.py  commands.py  config.py  multiplexer.py  tmux_bridge.py  transcriber.py  ui.py  vad.py  wizard.py  zellij_bridge.py
tests/: test_clipboard_bridge.py
