[project]
name = "voxcode"
version = "0.1.0"
description = "Voice input for Claude Code via local Whisper model"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.scripts]
voxcode = "voxcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxcode"]
